Closed Bug 38387 Opened 26 years ago Closed 26 years ago

Japanese pages do not lay out properly on Win95-J

Categories

(Core :: Layout, defect, P3)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: a-mutsu, Assigned: erik)

References

()

Details

(Whiteboard: [dogfood+][nsbeta2-] reviewed/approved; will check in 5/25)

From Bugzilla Helper: User-Agent: Mozilla/4.7 [ja] (Win95; I) BuildID: 2000050513 If the page containing Japanese is displayed, a Japanese character sequence will not be displayed in many cases. Or a layout collapses. Neither the cause which the problem generates, nor regularity is known. However, the same result is not brought by all of Shift-JIS/EUC-JP/JIS/UTF-8. Environment: Windows95 Japanes. (not OSR2) Reproducible: Always Steps to Reproduce: A sample is in URL. Actual Results: It displays like the screen shot of mozilla 2000050513.(Refer to the URL) Expected Results: It displays like the screen shot of NC4.7.(Refer to the URL) There was a man who experienced the same phenomenon. Also the man The Windows 95 Japanese version(not OSR2) is used.
I'm going to confirm this bug. There is general Japanese display failure on Windows 95 - Japanese. I don't see the same problem on Windows 98/NT-Japanese or Windows-95-US. In addition to the display failures mentioned in the test page at the above URL, you can also observe display failure with web pages like: http://www.yahoo.co.jp/ http://home.netscape.com/ On Windows-95 Japanese, these pages do not load completely and some table cell data are not displayed/missing. This is a very serious problem. Initially sending it to erik fro evaluation. Nominating for nsbeta2.
Assignee: rickg → erik
Keywords: nsbeta2
QA contact to blee@netscape.com for now.
QA Contact: petersen → blee
Status: UNCONFIRMED → NEW
Ever confirmed: true
The Netscape page URL given above should be corrected to: http://home.netscpe.com/ja
Troy recently added a new GetWidth method to nsRenderingContextWin. We need to add a similar method to nsRenderingContextWinA, for Win95-J.
Status: NEW → ASSIGNED
Summary: The page containing Japanese cannot be displayed. Or a layout is confused. → Japanese pages do not lay out properly on Win95-J
Target Milestone: --- → M16
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Target Milestone: M16 → M17
*** Bug 38984 has been marked as a duplicate of this bug. ***
We cannot see any Japanese pages on Win95J because of this bug. Nominating for dogfood
Keywords: dogfood
I should have added "in Win95"
Moving to [dogfood+] radar for M16 fix.
Whiteboard: [nsbeta2+] → [dogfood+][nsbeta2-]
Whiteboard: [dogfood+][nsbeta2-] → [dogfood+][nsbeta2-] fix in hand; waiting for review
Whiteboard: [dogfood+][nsbeta2-] fix in hand; waiting for review → [dogfood+][nsbeta2-] reviewed/approved; will check in 5/25
Target Milestone: M17 → M16
Checked in the fix.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Changed QA contact to teruko@netscape.com since Bom-Shik will be on vacation.
QA Contact: blee → teruko
I verified this in 2000-05-26-08 Win32 build on Win95J.
Status: RESOLVED → VERIFIED
SPAM. HTML Element component is deprecated, changing to Layout component. See bug 88132 for details.
Come on Bugzilla, you can do it...
Component: HTML Element → Layout
You need to log in before you can comment on or make changes to this bug.