bug 38387; add optimized GetWidth method to Japanese Windows 95-specific subclass nsRenderingContextWinA to allow proper layout on Win95-J; a,r=kmcclusk